migrate to svelte 5

--- a/package.json
+++ b/package.json
@@ -1,26 +1,13 @@
 {
-	"name": "portfolio",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite build && vite build && vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write . && eslint . --fix",
-		"lint": "prettier --check . && eslint .",
-		"prepare": "husky"
-	},
 	"devDependencies": {
 		"@steeze-ui/heroicons": "^2.3.0",
 		"@steeze-ui/lucide-icons": "^1.2.1",
 		"@steeze-ui/svelte-icon": "^1.5.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.2.0",
-		"@sveltejs/enhanced-img": "^0.2.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/enhanced-img": "^0.3.9",
+		"@sveltejs/kit": "^2.5.27",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
@@ -32,20 +19,33 @@
 		"eslint-plugin-import-no-duplicates-prefix-resolved-path": "^2.0.0",
 		"eslint-plugin-perfectionist": "^2.7.0",
 		"eslint-plugin-sonarjs": "^0.25.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.45.1",
 		"eslint-plugin-unused-imports": "^3.1.0",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.5.13",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"typescript": "^5.5.0",
+		"vite": "^5.4.4"
 	},
-	"type": "module"
+	"name": "portfolio",
+	"private": true,
+	"scripts": {
+		"build": "vite build",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev": "vite dev",
+		"format": "prettier --write . && eslint . --fix",
+		"lint": "prettier --check . && eslint .",
+		"prepare": "husky",
+		"preview": "vite build && vite build && vite preview"
+	},
+	"type": "module",
+	"version": "0.0.1"
 }
