--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+	"dependencies": {
+		"@lucide/svelte": "^0.503.0"
+	},
 	"devDependencies": {
-		"@steeze-ui/heroicons": "^2.3.0",
-		"@steeze-ui/lucide-icons": "^1.2.1",
-		"@steeze-ui/svelte-icon": "^1.5.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.2.0",
 		"@sveltejs/enhanced-img": "^0.3.9",
